Scrollbar styling and fixes

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -151,6 +151,26 @@ html {
           box-sizing: inherit;
 }
 
+* {
+  &::-webkit-scrollbar {
+    width: 12px;
+
+    background-color: $white;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: $white;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba($black, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $color1;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba($black, 0.3);
+  }
+}
+
 img {
   max-width: 100%;
 }
@@ -277,13 +297,13 @@ a {
   position: fixed;
   top: 10px;
 
-  width: 210px;
+  width: 200px;
   height: 100%;
   margin-right: 20px;
   overflow: auto;
 
   @include respond-to (break4) {
-    width: 460px;
+    width: 450px;
   };
 }
 
@@ -607,17 +627,17 @@ a {
     background-position: -2px 1px;
   }
   &--subordinate {
+    min-height: auto;
     margin-bottom: 5px;
     padding: 0;
 
     font-size: 10px;
     line-height: 12px;
     &::before {
-      background-image: none;
+      // background-image: none;
     }
   }
 }
-
 
 .person__info-line {
   display: flex;
